--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" /> <!--Camera hack in service-->
-    <uses-permission android:name="android.permission.WRITE_SETTINGS" /> <!--Turn screen off-->
+    <!--<uses-permission android:name="android.permission.WRITE_SETTINGS" /> Turn screen off-->
 
     <uses-feature android:name="android.hardware.camera" android:required="false"/>
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
@@ -52,6 +52,7 @@
             android:label="JavaCameraService" >
         </service>
 
+        <!-- Turn screen off
         <receiver
             android:name=".utils.DummyAdminReciever"
             android:permission="android.permission.BIND_DEVICE_ADMIN" >
@@ -62,7 +63,7 @@
             <intent-filter>
                 <action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />
             </intent-filter>
-        </receiver>
+        </receiver>-->
     </application>
 
 </manifest>
